force-app/main/default/objects/Generated_Document__c/Generated_Document__c.object-meta.xml
<CustomObject>
    <label>Generated Document</label>
    <pluralLabel>Generated Documents</pluralLabel>
    <nameField>
        <displayFormat>GD-{0000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks document generation requests for both interactive and batch flows. Manages status, retries, locks, and results. RequestHash ensures idempotency.</description>
</CustomObject>