force-app/main/default/objects/Generated_Document__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent Account. Used for ContentDocumentLink creation after file upload.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>