force-app/main/default/objects/Generated_Document__c/fields/Attachment_Warnings__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Warnings__c</fullName>
    <description>Structured warnings for additional PDF files that were skipped during generation.</description>
    <label>Attachment Warnings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>