force-app/main/default/objects/Generated_Document__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of processing attempts. Incremented on each failure. After 3 attempts with backoff (1m/5m/15m), status set to FAILED.</description>
    <label>Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>