force-app/main/default/objects/Generated_Document__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent Case. Used for ContentDocumentLink creation after file upload.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>