force-app/main/default/objects/Generated_Document__c/fields/Composite_Document__c.field-meta.xml
<CustomField>
    <fullName>Composite_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Composite Document configuration used for this generation. Mutually exclusive with Template__c.</description>
    <label>Composite Document</label>
    <referenceTo>Composite_Document__c</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>