force-app/main/default/objects/Generated_Document__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent Contact. Used for ContentDocumentLink creation after file upload.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>