force-app/main/default/objects/Generated_Document__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Unique trace ID for observability and troubleshooting. Propagated to Node API, logs, and Application Insights.</description>
    <label>Correlation ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>