force-app/main/default/objects/Generated_Document__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error message from failed processing. Captures merge errors, LibreOffice crashes, upload failures, etc. Used for troubleshooting.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>