force-app/main/default/objects/Generated_Document__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Displays the date and time when the generated document record was last modified.</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>