force-app/main/default/objects/Generated_Document__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional parent Lead. Used for ContentDocumentLink creation after file upload.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>