force-app/main/default/objects/Generated_Document__c/fields/LockedUntil__c.field-meta.xml
<CustomField>
    <fullName>LockedUntil__c</fullName>
    <description>Distributed lock timestamp (TTL = 2 minutes). Poller sets this when picking up work. Stale locks allow re-pick after expiry.</description>
    <label>Locked Until</label>
    <type>DateTime</type>
</CustomField>