force-app/main/default/objects/Generated_Document__c/fields/MergedDocxFileId__c.field-meta.xml
<CustomField>
    <fullName>MergedDocxFileId__c</fullName>
    <description>ContentVersionId of the merged DOCX file (optional)</description>
    <label>Merged DOCX File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>