force-app/main/default/objects/Generated_Document__c/fields/OutputFileId__c.field-meta.xml
<CustomField>
    <fullName>OutputFileId__c</fullName>
    <description>ContentVersionId of the generated PDF (or DOCX). Set when Status becomes SUCCEEDED. Used to construct download URL.</description>
    <label>Output File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>