force-app/main/default/objects/Generated_Document__c/fields/OutputFormat__c.field-meta.xml
<CustomField>
    <fullName>OutputFormat__c</fullName>
    <description>Desired output file format. PDF is standard; DOCX, PPTX, and XLSX may be used for editable outputs.</description>
    <label>Output Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>PPTX</fullName>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>