force-app/main/default/objects/Generated_Document__c/fields/PendingPreview__c.field-meta.xml
<CustomField>
    <fullName>PendingPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the generated file is waiting for user preview confirmation before it is linked to parent records.</description>
    <label>Pending Preview</label>
    <type>Checkbox</type>
</CustomField>