force-app/main/default/objects/Generated_Document__c/fields/Preview_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Preview_Page_Count__c</fullName>
    <description>Actual number of pages in the generated PDF used to report secure preview navigation and truncation.</description>
    <label>Preview Page Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>