force-app/main/default/objects/Generated_Document__c/fields/Preview_Page_File_Ids__c.field-meta.xml
<CustomField>
    <fullName>Preview_Page_File_Ids__c</fullName>
    <description>Internal JSON array of temporary JPEG ContentVersion IDs used for secure preview before Save.</description>
    <label>Preview Page File IDs</label>
    <length>3900</length>
    <type>LongTextArea</type>
</CustomField>