force-app/main/default/objects/Generated_Document__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Queue priority for batch processing. Higher values processed first. Default 0 for standard priority.</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>