force-app/main/default/objects/Generated_Document__c/fields/RequestHash__c.field-meta.xml
<CustomField>
    <fullName>RequestHash__c</fullName>
    <description>Unique generation identity: content hash for legacy requests, or user-scoped operation hash when a client request key is supplied. Replaying an operation returns its existing record.</description>
    <externalId>true</externalId>
    <label>Request Hash</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>