force-app/main/default/objects/Generated_Document__c/fields/RequestJSON02__c.field-meta.xml
<CustomField>
    <fullName>RequestJSON02__c</fullName>
    <description>Request JSON segment 2. RequestJSON__c stores segment 1.</description>
    <label>Request JSON 02</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>