force-app/main/default/objects/Generated_Document__c/fields/RequestJSON03__c.field-meta.xml
<CustomField>
    <fullName>RequestJSON03__c</fullName>
    <description>Request JSON segment 3. RequestJSON__c stores segment 1.</description>
    <label>Request JSON 03</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>