force-app/main/default/objects/Generated_Document__c/fields/RequestJSON04__c.field-meta.xml
<CustomField>
    <fullName>RequestJSON04__c</fullName>
    <description>Request JSON segment 4. RequestJSON__c stores segment 1.</description>
    <label>Request JSON 04</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>