force-app/main/default/objects/Generated_Document__c/fields/ScheduledRetryTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledRetryTime__c</fullName>
    <description>Scheduled time for next retry attempt</description>
    <label>Scheduled Retry Time</label>
    <type>DateTime</type>
</CustomField>