force-app/main/default/objects/Generated_Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Document generation lifecycle status. QUEUED → PROCESSING → SUCCEEDED/FAILED/CANCELED. Indexed for poller queries.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUEUED</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>SUCCEEDED</fullName>
                <label>Succeeded</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Canceled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>