force-app/main/default/objects/Generated_Document__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the Docgen Template used for this document generation.</description>
    <label>Template</label>
    <referenceTo>Docgen_Template__c</referenceTo>
    <relationshipLabel>Generated Documents</relationshipLabel>
    <relationshipName>Generated_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>