force-app/main/default/objects/Generated_Document__c/validationRules/Require_Template_Or_Composite.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Template_Or_Composite</fullName>
    <active>false</active>
    <description>Either Template or Composite Document must be specified, but not both and not neither.</description>
    <errorConditionFormula>AND(
    ISBLANK(Template__c),
    ISBLANK(Composite_Document__c)
)</errorConditionFormula>
    <errorMessage>Either Template or Composite Document must be specified.</errorMessage>
</ValidationRule>